<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EasyGoer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Cài Đặt</string>
    <string name="title_activity_register">Đăng ký</string>
    <string name="large_text"></string>

    <!--Register Activity-->
    <string name="string_full_name">Họ và tên</string>
    <string name="string_phone_number">Số điện thoại</string>
    <string name="string_driving_years">Số năm lái xe</string>
    <string name="string_birthday">Năm sinh</string>
    <string name="string_gender">Giới tính</string>
    <string name="string_regularly_place">Nơi bắt khách / đón xe thường xuyên</string>
    <string name="string_password">Mật khẩu</string>
    <string name="string_driver">Tài xế</string>
    <string name="string_client">Hành khách</string>
    <string name="string_ward">Xã/phường</string>
    <string name="string_dictrict">Quận/huyện</string>
    <string name="string_province">Tỉnh/thành phố</string>
    <string name="string_brand">Hãng xe</string>
    <string name="title_activity_list_trip">Danh sách chuyến đi</string>
    <string name="title_activity_post_trip">Đăng chuyến</string>
    <string name="title_register">Register</string>
    <!--ListTripActivity-->
    <string name="action_post_trip">Đăng chuyến</string>
    <string name="action_log_out">Đăng xuất</string>
    <string name="action_next">Tiếp</string>

    <!--PostTripActivity-->
    <string name="string_start_place">Nơi bắt đầu</string>
    <string name="string_end_place">Nơi kết thúc</string>
    <string name="string_time">Thời gian bắt đầu</string>
    <string name="string_price">Giá</string>
    <string name="string_comment">Ghi chú</string>

    <!--Notification from Server to android device added 28/8/2016-->
    <!--
    <string name="app_name">GCM Android Example</string>
    <string name="hello_world">Hello world!</string>
    -->
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Android Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">GCM: device successfully registered!</string>
    <string name="gcm_unregistered">GCM: device successfully unregistered!</string>
    <string name="gcm_message">GCM: you got message!</string>
    <string name="gcm_error">GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">Demo Server: successfully added device!</string>
    <string name="server_unregistered">Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_post_trip">Post trip</string>
    <string name="nav_help">Help</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Logout</string>
    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>List trip</item>
        <item>Post trip</item>
        <item>Help</item>
        <item>Settings</item>
        <item>Logout</item>
    </string-array>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="action_search">Search</string>
    <string name="email_field">Email</string>
    <string name="name_field">Full name</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_call">Call</string>
    <string name="string_login_fail">Login fail</string>
    <string name="string_search_fail">Search fail</string>
    <string name="string_write_message">Write message</string>
</resources>
