<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/nav_home"/>
        <item
            android:id="@+id/nav_post_trip"
            android:icon="@drawable/ic_note_add_black_24dp"
            android:title="@string/nav_post_trip"/>
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_live_help_black_24dp"
            android:title="@string/nav_help"/>

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/nav_logout"/>
    </group>
</menu>