<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg1"
    tools:context="fanvu.easygoer.LoginActivity">

    <LinearLayout
        style="@style/LoginFormContainer"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/register_firstLayout"
            style="@style/LoginFormContainer"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/register_dimens_margin_top"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                style="@style/AppTextFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_full_name" />

            <EditText
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/register_dimens_margin"
                android:layout_marginTop="@dimen/register_dimens_margin"
                android:background="@drawable/style_edittext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/Black" />

            <TextView
                style="@style/AppTextFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_phone_number" />

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/register_dimens_margin"
                android:layout_marginTop="@dimen/register_dimens_margin"
                android:background="@drawable/style_edittext"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/Black" />

            <TextView
                style="@style/AppTextFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_birthday" />

            <EditText
                android:id="@+id/birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/register_dimens_margin"
                android:layout_marginTop="@dimen/register_dimens_margin"
                android:background="@drawable/style_edittext"
                android:inputType="datetime"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/Black" />

            <TextView
                style="@style/AppTextFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_password" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/register_dimens_margin"
                android:layout_marginTop="@dimen/register_dimens_margin"
                android:background="@drawable/style_edittext"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/Black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/register_secondLayout"
            style="@style/LoginFormContainer"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/register_dimens_margin_top"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/register_dimens_margin"
                android:layout_marginTop="@dimen/register_dimens_margin"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton_driver"
                    style="@style/AppTextFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/string_driver" />

                <RadioButton
                    android:id="@+id/radioButton_client"
                    style="@style/AppTextFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/register_dimens_margin"
                    android:text="@string/string_client" />

            </LinearLayout>

            <TextView
                style="@style/AppTextFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_regularly_place" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/register_dimens_margin"
                android:layout_marginTop="@dimen/register_dimens_margin"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/AppTextFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_ward" />

                <EditText
                    android:id="@+id/wardStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/register_dimens_margin"
                    android:background="@drawable/style_edittext"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/Black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/register_dimens_margin"
                android:layout_marginTop="@dimen/register_dimens_margin"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/AppTextFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_dictrict" />

                <EditText
                    android:id="@+id/dictricStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/register_dimens_margin"
                    android:background="@drawable/style_edittext"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/Black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/register_dimens_margin"
                android:layout_marginTop="@dimen/register_dimens_margin"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/AppTextFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_province" />

                <EditText
                    android:id="@+id/provinceStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/register_dimens_margin"
                    android:background="@drawable/style_edittext"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/Black" />
            </LinearLayout>

            <TextView
                style="@style/AppTextFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_brand" />

            <EditText
                android:id="@+id/brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/register_dimens_margin"
                android:layout_marginTop="@dimen/register_dimens_margin"
                android:background="@drawable/style_edittext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/Black" />

        </LinearLayout>

        <Button
            android:id="@+id/register_button"
            style="@style/button_text"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/blue_button"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/action_next" />


    </LinearLayout>

</FrameLayout>
